# OpenCV_primer

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt  aruco_webcam.cpp  canny.cpp  haarcascade.cpp  hello_world.cpp  webcam.cpp
python/: canny.py  color_detect.py  haarcascades.py  hello_world.py  webcam.py
python/aruco/: detect.py  detect_webcam.py  generate.py
python/calibration/: calibration.py
